fixed layout issue in login and sign up page

--- a/src/1Authentication/SignUpSignIn.css
+++ b/src/1Authentication/SignUpSignIn.css
@@ -1,9 +1,9 @@
 .main_form {
-  animation: home ease-in-out backwards 0.5s;
+  animation: home ease-in-out backwards 0.3s;
 }
 
 .switch {
-  animation: home ease-in-out backwards 0.5s;
+  animation: home ease-in-out backwards 0.3s;
 }
 
 .signin_signout {
